--- a/webproject/index.html
+++ b/webproject/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,14 +9,15 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/27c32d15b7.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div id="header">
         <div class="container">
-            <nav>   
+            <nav>
                 <img src="images/kyrie-irving-logo-kenneth-smith-transparent.png" class="logo">
                 <ul id="sidemenu">
-                    <li><a href="index.html">Anasayfa</a></li>
-                    <li><a href="hakkinda.html">Hakkında</a></li>
+                    <li><a href="index.html">Hakkında</a></li>
+                    <li><a href="hobilerim.html">Hobilerim</a></li>
                     <li><a href="cv.html">Özgeçmiş</a></li>
                     <li><a href="sehrimiz.html">Şehrim</a></li>
                     <li><a href="mirasımız.html">Mirasımız</a></li>
@@ -26,146 +28,120 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
 
-        
+
             <div class="header-text">
-                <p> Design</p>
-                <h1> Merhaba<br><span> Kerem Yunus Parlakyiğit</span>'in kişisel<br></s>web sitesine hoşgeldiniz <br> </h1>
+                <h1> Merhaba<br><span> Kerem Yunus Parlakyiğit</span>'in kişisel<br></s>web sitesine hoşgeldiniz <br>
+                </h1>
             </div>
         </div>
     </div>
-   <!-- --------------hakkımda--------- -->
+    <!-- --------------hakkımda--------- -->
     <div id="about">
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
+                    <img src="images/kyrie-irving-logo-kenneth-smith-transparent.png" alt="">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">Benim Hakkımda</h1>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt laboriosam nesciunt ducimus officiis asperiores debitis ad quisquam dolores, mollitia sapiente inventore consequatur perspiciatis saepe blanditiis! Repudiandae consectetur ipsa facilis sunt.</p>
-                <div class="tab-titles">
-                    <p class="tab-links active-link" onclick="opentab('Yetenekler')">Yetenekler</p>
-                    <p class="tab-links" onclick="opentab('Eğitim')">Eğitim</p>
-                    <p class="tab-links" onclick="opentab('Spor Geçmişi')">Spor Geçmişi</p>
-                </div>
-                <div class="tab-contents active-tab" id="Yetenekler">
-                    <ul>
-                        <li><span>Web Geliştiriciliği</span><br>Web Sitesi Oluşturma/Tasarlama</li>
-                        <li><span>Uygulama Geliştiriciliği</span><br>C#ile Windows için forms uygulamaları</li>
-                    </ul>
-                </div>
-                <div class="tab-contents" id="Eğitim">
-                    <ul>
-                        <li><span>İlköğretim</span><br>Ahmet Sezer İlköğretim Okulu (2011-2019)</li>
-                        <li><span>Lise</span><br>Atatürk Lisesi (2019-2023)</li>
-                        <li><span>Üniversite</span><br>Sakarya Üniverstesi/Bilgisayar Mühendisliği <br> (2023-devam ediyor)</li>
-                    </ul>
-                </div>
-                <div class="tab-contents" id="Spor Geçmişi">
-                    <ul>
-                        <li><span>Basketbol</span><br>Atatürk Lisesi Basketbol Takımı(2019-2023) </li>
-                        <li><span>Tekvando</span><br>Öncü Spor Kulübü (2014-2018)</li>
-                        <li><span>Futbol</span><br>Ahmet Sezer İlköğretim Okulu Futbol Takımı (2015-2018)</li>
-                        <li><span>Fitness</span><br>(2020-...)</li>
-                    </ul>
-                </div>
+                    <p>Merhaba, ben Kerem Yunus Parlakyiğit. Eskişehirliyim, 18 yaşındayım. Sakarya Üniversitesi
+                        Bigisayar Mühendisliği 1. sınıf öğrencisiyim.</p>
+                    <div class="tab-titles">
+                        <p class="tab-links active-link" onclick="opentab('Yetenekler')">Yetenekler</p>
+                        <p class="tab-links" onclick="opentab('Eğitim')">Eğitim</p>
+                        <p class="tab-links" onclick="opentab('Spor Geçmişi')">Spor Geçmişi</p>
+                    </div>
+                    <div class="tab-contents active-tab" id="Yetenekler">
+                        <ul>
+                            <li><span>Web Geliştiriciliği</span><br>Web Sitesi Oluşturma/Tasarlama</li>
+                            <li><span>Uygulama Geliştiriciliği</span><br>C#ile Windows için forms uygulamaları</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="Eğitim">
+                        <ul>
+                            <li><span>İlköğretim</span><br>Ahmet Sezer İlköğretim Okulu (2011-2019)</li>
+                            <li><span>Lise</span><br>Atatürk Lisesi (2019-2023)</li>
+                            <li><span>Üniversite</span><br>Sakarya Üniverstesi/Bilgisayar Mühendisliği <br> (2023-devam
+                                ediyor)</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="Spor Geçmişi">
+                        <ul>
+                            <li><span>Basketbol</span><br>Atatürk Lisesi Basketbol Takımı(2019-2023) </li>
+                            <li><span>Tekvando</span><br>Öncü Spor Kulübü (2014-2018)</li>
+                            <li><span>Futbol</span><br>Ahmet Sezer İlköğretim Okulu Futbol Takımı (2015-2018)</li>
+                            <li><span>Fitness</span><br>(2020-...)</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-<!------------------hobilerim--------------->
-<div id="about">
-    <div class="container">
-        <h1 class="sub-title">Hobilerim</h1>
+    <!------------------hobilerim--------------->
+    <div id="about">
+        <div class="container">
+            <h1 class="sub-title">Hobilerim</h1>
             <div class="hobbies-list">
                 <div>
                     <i class="fa-solid fa-crop"></i>
                     <h2>Spor Yapmak</h2>
-                    <p>Küçüklüğümden beri sporla iç içe oldum, birçok erkek çocuk gibi futbolla başlayan spor serüvenim sonrasında yüzme, tekvando, basketbol ve fitness ile devam etti.
-                    şu anda amatör olarak basketbol ve fitness ile ilgilenmeye devam ediyorum.</p>
-                    <a href="#">Daha fazlasını öğrenin</a>
+                    <p>Küçüklüğümden beri sporla iç içe oldum, birçok erkek çocuk gibi futbolla başlayan spor serüvenim
+                        sonrasında yüzme, tekvando, basketbol ve fitness ile devam etti.
+                        şu anda amatör olarak basketbol ve fitness ile ilgilenmeye devam ediyorum.</p>
+                    <a href="hobilerim.html">Daha fazlasını öğrenin</a>
                 </div>
                 <div>
                     <i class="fa-solid fa-computer"></i>
                     <h2>Müzik Dinlemek</h2>
-                    <p>Müzik dinlemek gün içinde bolca yer verdiğim aktivitelerden birisi</p>
-                    <a href="#">Daha fazlasını öğrenin</a>
+                    <p>Müzik dinlemek gün içinde bolca yer verdiğim aktivitelerden birisi evde, yolda, okulda kısacası
+                        günümün
+                        büyük bir kısmında müzik dinlerim.</p>
+                    <a href="hobilerim.html">Daha fazlasını öğrenin</a>
                 </div>
                 <div>
                     <i class="fa-solid fa-dumbbell"></i><i> </i><i class="fa-solid fa-bowl-food"></i>
                     <h2>Dizi/Film izlemek</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, voluptatum assumenda provident 
-                        eius dignissimos sit sequi, nulla molestiae voluptates quasi delectus illo cupiditate sapiente, qui possimus porro iusto. Eos, possimus?</p>
-                    <a href="#">Daha fazlasını öğrenin</a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, voluptatum assumenda provident
+                        eius dignissimos sit sequi, nulla molestiae voluptates quasi delectus illo cupiditate sapiente,
+                        qui possimus porro iusto. Eos, possimus?</p>
+                    <a href="hobilerim.html">Daha fazlasını öğrenin</a>
                 </div>
             </div>
         </div>
-    </div> 
-<!-- ------------contact-------------- -->
-    <div class="container">
-        <div class="row">
-            <div class="contact-left">
-            <h1 class="sub-title">İletişime Geçin</h1>
-            <p><i class="fa-solid fa-paper-plane"></i>parlakyigitkerem@gmail.com</p>
-            <p><i class="fa-solid fa-phone"></i>+90 541 143 2358</p>     
-        <div class="social-icons">
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-            <a href=""><i class="fa-brands fa-linkedin"></i></a>            
-        </div>
     </div>
-        <div class="contact-right">
-            <form name="submit-to-google-sheet">
-                <input type="text" name="İsim" placeholder="İsminiz" required>
-                <input type="email" name="email" placeholder="e-mail adresiniz" required>
-                <textarea name="Mesaj" rows="6" placeholder="Mesajınız"></textarea>
-                <button type="submit" class="btn btn2">Gönder</button>
-               </form>
-              </div>
-         </div>
-    </div>
+    <!-- ------------contact-------------- -->
+   
+    <script>
 
-</div>
-<script>
-
-    var tablinks = document.getElementsByClassName("tab-links");
-    var tabcontents = document.getElementsByClassName("tab-contents");
-    function opentab(tabname){
-        for(tablink of tablinks){
-            tablink.classList.remove("active-link");
+        var tablinks = document.getElementsByClassName("tab-links");
+        var tabcontents = document.getElementsByClassName("tab-contents");
+        function opentab(tabname) {
+            for (tablink of tablinks) {
+                tablink.classList.remove("active-link");
+            }
+            for (tabcontent of tabcontents) {
+                tabcontent.classList.remove("active-tab");
+            }
+            event.currentTarget.classList.add("active-link");
+            document.getElementById(tabname).classList.add("active-tab")
         }
-       for(tabcontent of tabcontents){
-            tabcontent.classList.remove("active-tab");
+    </script>
+
+    <script>
+        var sidemeu = document.getElementById("sidemenu");
+
+
+        function openmenu() {
+            sidemeu.style.right = "0";
         }
-        event.currentTarget.classList.add("active-link");
-        document.getElementById(tabname).classList.add("active-tab")
-    }
-</script>
+        function closemenu() {
+            sidemeu.style.right = "-200px";
+        }
 
-<script>
-     var sidemeu = document.getElementById("sidemenu");
+    </script>
 
-
-     function openmenu(){
-        sidemeu.style.right="0";
-     }
-     function closemenu(){
-        sidemeu.style.right="-200px";
-     }
-
-</script>
-
-<script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbwG6uA6mVnjpKjQWEL6SVV2_anGrh_osDcJ5jK4xZGPlIFcKsilW5ZFul7CJvHp-5Qt/exec'
-    const form = document.forms['submit-to-google-sheet']
-  
-    form.addEventListener('submit', e => {
-      e.preventDefault()
-      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-        .then(response => console.log('Success!', response))
-        .catch(error => console.error('Error!', error.message))
-    })
-  </script>
-
+    
 
 </body>
+
 </html>
