--- a/webproject/cv.html
+++ b/webproject/cv.html
@@ -19,9 +19,8 @@
             <nav>
                 <img src="images/kyrie-irving-logo-kenneth-smith-transparent.png" class="logo">
                 <ul id="sidemenu">
-                    <li><a href="index.html">Anasayfa</a></li>
-                    <li><a href="hakkinda.html">Hakkında</a></li>
-                    <li><a href="cv.html">Özgeçmiş</a></li>
+                    <li><a href="index.html">Hakkında</a></li>
+                    <li><a href="hobilerim.html">Hobilerim</a></li>                    <li><a href="cv.html">Özgeçmiş</a></li>
                     <li><a href="sehrimiz.html">Şehrim</a></li>
                     <li><a href="mirasımız.html">Mirasımız</a></li>
                     <li><a href="iletisim.html">İletişim</a></li>
