--- a/webproject/index.html
+++ b/webproject/index.html
@@ -22,7 +22,7 @@
                     <li><a href="sehrimiz.html">Şehrim</a></li>
                     <li><a href="mirasımız.html">Mirasımız</a></li>
                     <li><a href="iletisim.html">İletişim</a></li>
-                    <li><a href="kaydol.html">Giriş Yap / Kaydol</a></li>
+                    <li><a href="login.php">Giriş Yap / Kaydol</a></li>
                     <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
@@ -54,7 +54,7 @@
                     <div class="tab-contents active-tab" id="Yetenekler">
                         <ul>
                             <li><span>Web Geliştiriciliği</span><br>Web Sitesi Oluşturma/Tasarlama</li>
-                            <li><span>Uygulama Geliştiriciliği</span><br>C#ile Windows için forms uygulamaları</li>
+                            <li><span>Uygulama Geliştiriciliği</span><br>C# ile Windows için forms uygulamaları</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="Eğitim">
