--- a/webproject/index.html
+++ b/webproject/index.html
@@ -22,7 +22,7 @@
                     <li><a href="sehrimiz.html">Şehrim</a></li>
                     <li><a href="mirasımız.html">Mirasımız</a></li>
                     <li><a href="iletisim.html">İletişim</a></li>
-                    <li><a href="login.php">Giriş Yap / Kaydol</a></li>
+                    <li><a href="login.php">Giriş Yap</a></li>
                     <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
@@ -83,15 +83,13 @@
             <h1 class="sub-title">Hobilerim</h1>
             <div class="hobbies-list">
                 <div>
-                    <i class="fa-solid fa-crop"></i>
-                    <h2>Spor Yapmak</h2>
-                    <p>Küçüklüğümden beri sporla iç içe oldum, birçok erkek çocuk gibi futbolla başlayan spor serüvenim
-                        sonrasında yüzme, tekvando, basketbol ve fitness ile devam etti.
-                        şu anda amatör olarak basketbol ve fitness ile ilgilenmeye devam ediyorum.</p>
+                    <i class="fa-solid fa-tv"></i>
+                    <h2>Film İzlemek</h2>
+                    <p>Çocukluğumdan beri dizi ve film izlemeyi çok severim sinema favori aktivitelerimdendir.</p>
                     <a href="hobilerim.html">Daha fazlasını öğrenin</a>
                 </div>
                 <div>
-                    <i class="fa-solid fa-computer"></i>
+                    <i class="fa-solid fa-headphones"></i>
                     <h2>Müzik Dinlemek</h2>
                     <p>Müzik dinlemek gün içinde bolca yer verdiğim aktivitelerden birisi evde, yolda, okulda kısacası
                         günümün
@@ -99,18 +97,18 @@
                     <a href="hobilerim.html">Daha fazlasını öğrenin</a>
                 </div>
                 <div>
-                    <i class="fa-solid fa-dumbbell"></i><i> </i><i class="fa-solid fa-bowl-food"></i>
-                    <h2>Dizi/Film izlemek</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, voluptatum assumenda provident
-                        eius dignissimos sit sequi, nulla molestiae voluptates quasi delectus illo cupiditate sapiente,
-                        qui possimus porro iusto. Eos, possimus?</p>
+                    <i class="fa-solid fa-dumbbell"></i>
+                    <h2>Spor Yapmak</h2>
+                    <p>Küçüklüğümden beri sporla iç içe oldum, birçok erkek çocuk gibi futbolla başlayan spor serüvenim
+                        sonrasında yüzme, tekvando, basketbol ve fitness ile devam etti.
+                        şu anda amatör olarak basketbol ve fitness ile ilgilenmeye devam ediyorum.</p>
                     <a href="hobilerim.html">Daha fazlasını öğrenin</a>
                 </div>
             </div>
         </div>
     </div>
     <!-- ------------contact-------------- -->
-   
+
     <script>
 
         var tablinks = document.getElementsByClassName("tab-links");
@@ -140,7 +138,7 @@
 
     </script>
 
-    
+
 
 </body>
 
