--- a/webproject/cv.html
+++ b/webproject/cv.html
@@ -20,11 +20,12 @@
                 <img src="images/kyrie-irving-logo-kenneth-smith-transparent.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="index.html">Hakkında</a></li>
-                    <li><a href="hobilerim.html">Hobilerim</a></li>                    <li><a href="cv.html">Özgeçmiş</a></li>
+                    <li><a href="hobilerim.html">Hobilerim</a></li>
+                    <li><a href="cv.html">Özgeçmiş</a></li>
                     <li><a href="sehrimiz.html">Şehrim</a></li>
                     <li><a href="mirasımız.html">Mirasımız</a></li>
                     <li><a href="iletisim.html">İletişim</a></li>
-                    <li><a href="kaydol.html">Giriş Yap / Kaydol</a></li>
+                    <li><a href="login.php">Giriş Yap</a></li>
                     <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
 
                 </ul>
@@ -73,18 +74,15 @@
 
     </div>
     <script>
-
-
-        var sidemeu = document.getElementById("sidemenu");
-
+        var sidemenu = document.getElementById("sidemenu");
 
         function openmenu() {
-            sidemeu.style.right = "0";
-        }
-        function closemenu() {
-            sidemeu.style.right = "-200px";
+            sidemenu.style.right = "0";
         }
 
+        function closemenu() {
+            sidemenu.style.right = "-200px";
+        }
     </script>
 </body>
 
