--- a/webproject/hobilerim.html
+++ b/webproject/hobilerim.html
@@ -20,7 +20,7 @@
                     <li><a href="sehrimiz.html">Şehrim</a></li>
                     <li><a href="mirasımız.html">Mirasımız</a></li>
                     <li><a href="iletisim.html">İletişim</a></li>
-                    <li><a href="kaydol.html">Giriş Yap / Kaydol</a></li>
+                    <li><a href="login.php">Giriş Yap</a></li>
                     <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
@@ -76,6 +76,10 @@
                 <li>Valorant</li>
             </ul>
         </div>
+    </div>
+    <div class="api-baslık">
+    <h1>Benim bu aktivitelerden en sevdiğim ise film izlemek. İşte sizin için bazı popüler filmler:</h1>
+    <h5>(TMDb sitesinden api ile alınmıştır)</h5>
     </div>
     
     <script>
