--- a/webproject/sehrimiz.html
+++ b/webproject/sehrimiz.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kişisel Portfolio Website</title>
@@ -21,11 +21,12 @@
         <img src="images/kyrie-irving-logo-kenneth-smith-transparent.png" class="logo">
         <ul id="sidemenu">
           <li><a href="index.html">Hakkında</a></li>
-          <li><a href="hobilerim.html">Hobilerim</a></li>          <li><a href="cv.html">Özgeçmiş</a></li>
+          <li><a href="hobilerim.html">Hobilerim</a></li>
+          <li><a href="cv.html">Özgeçmiş</a></li>
           <li><a href="sehrimiz.html">Şehrim</a></li>
           <li><a href="mirasımız.html">Mirasımız</a></li>
           <li><a href="iletisim.html">İletişim</a></li>
-          <li><a href="kaydol.html">Giriş Yap / Kaydol</a></li>
+          <li><a href="login.php">Giriş Yap</a></li>
           <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
 
         </ul>
@@ -75,148 +76,173 @@
     </ul>
 
     <h4 id="gezi">Gezilebilecek Yerler:</h4>
-  <h5>Müzeler</h5>
-  <div class="content-section">
-    <div class="text">
-      <ul>
-        <li>Yılmaz Büyükerşen Balmumu Heykeller Müzesi</li>
-        <li>Eti Arkeoloji Müzesi</li>
-        <li>Cumhuriyet Tarihi Müzesi</li>
-        <li>Hava Müzesi</li>
-        <li>Demiryolları Müzesi</li>
-        <li>Tülomsaş Müzesi</li>
-        <li>ESOGÜ Zooloji Müzesi</li>
-      </ul>
+    <h5>Müzeler</h5>
+    <div class="content-section">
+      <div class="text">
+        <ul>
+          <li>Yılmaz Büyükerşen Balmumu Heykeller Müzesi</li>
+          <li>Eti Arkeoloji Müzesi</li>
+          <li>Cumhuriyet Tarihi Müzesi</li>
+          <li>Hava Müzesi</li>
+          <li>Demiryolları Müzesi</li>
+          <li>Tülomsaş Müzesi</li>
+          <li>ESOGÜ Zooloji Müzesi</li>
+        </ul>
+      </div>
+      <div class="image">
+        <img src="images/hava.jpg" alt="Müzeler">
+        <div class="image-caption">Havacılık Müzesi</div>
+      </div>
     </div>
-    <div class="image">
-      <img src="images/hava.jpg" alt="Müzeler">
-      <div class="image-caption">Havacılık Müzesi</div>
+
+    <h5>Parklar</h5>
+    <div class="content-section">
+      <div class="text">
+        <ul>
+          <li>Sazova Park</li>
+          <li>Dede Korkut Parkı</li>
+          <li>Kent Park</li>
+          <li>Şelale Park</li>
+          <li>Anıt Park</li>
+          <li>Kanlıkavak Parkı</li>
+        </ul>
+      </div>
+      <div class="image">
+        <img src="images/SAZOVA.jpg" alt="Parklar">
+        <div class="image-caption">Sazova Park</div>
+      </div>
+    </div>
+
+    <h5>Alışveriş Merkezleri</h5>
+    <div class="content-section">
+      <div class="text">
+        <ul>
+          <li>Espark Avm</li>
+          <li>Kanatlı Avm</li>
+          <li>Özdilek Avm</li>
+          <li>Vega Avm</li>
+          <li>Cassaba Modern</li>
+        </ul>
+      </div>
+      <div class="image">
+        <img src="images/espark.jpg" alt="Alışveriş Merkezleri">
+        <div class="image-caption">Espark AVM</div>
+      </div>
+    </div>
+
+    <h5>Mesire Alanları</h5>
+    <div class="content-section">
+      <div class="text">
+        <ul>
+          <li>Regülatör Piknik Alanı</li>
+          <li>Şehr-i Derya Park</li>
+          <li>Musaözü Tabiat Parkı</li>
+          <li>Kent Ormanı</li>
+          <li>Orman Fidanlığı</li>
+          <li>Çatacık Ormanı</li>
+          <li>Eski Göleti Mesire Alanı</li>
+        </ul>
+      </div>
+      <div class="image">
+        <img src="images/sehriderya.jpg" alt="Mesire Alanları">
+        <div class="image-caption">Şehr-i Derya Park</div>
+      </div>
+    </div>
+
+    <h5>Camiler</h5>
+    <div class="content-section">
+      <div class="text">
+        <ul>
+          <li>Reşadiye Cami</li>
+          <li>Çarşı Cami</li>
+          <li>Kurşunlu Küliyesi</li>
+          <li>Alaaddin Cami</li>
+          <li>Tiryakizade Cami</li>
+        </ul>
+      </div>
+      <div class="image">
+        <img src="images/reşat.jpg" alt="Camiler">
+        <div class="image-caption">Reşadiye Cami</div>
+      </div>
+    </div>
+
+    <h4>Yöresel Lezzetler</h4>
+    <div class="content-section">
+      <div class="text">
+        <ul>
+          <li>Çibörek</li>
+          <li>Balaban Kebap</li>
+          <li>Haşhaşlı Gözleme</li>
+          <li>Met Helvası</li>
+        </ul>
+      </div>
+      <div class="image">
+        <img src="images/çibörek.jpg" alt="Yöresel Lezzetler">
+        <div class="image-caption">Çibörek</div>
+      </div>
     </div>
   </div>
 
-  <h5>Parklar</h5>
-  <div class="content-section">
-    <div class="text">
-      <ul>
-        <li>Sazova Park</li>
-        <li>Dede Korkut Parkı</li>
-        <li>Kent Park</li>
-        <li>Şelale Park</li>
-        <li>Anıt Park</li>
-        <li>Kanlıkavak Parkı</li>
-      </ul>
-    </div>
-    <div class="image">
-      <img src="images/SAZOVA.jpg" alt="Parklar">
-      <div class="image-caption">Sazova Park</div>
-    </div>
-  </div>
 
-  <h5>Alışveriş Merkezleri</h5>
-  <div class="content-section">
-    <div class="text">
-      <ul>
-        <li>Espark Avm</li>
-        <li>Kanatlı Avm</li>
-        <li>Özdilek Avm</li>
-        <li>Vega Avm</li>
-        <li>Cassaba Modern</li>
-      </ul>
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+          aria-label="Slide 4"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <a href="kanlikavak.html"><img src="images/eskfoto/kanlikavak.webp" class="d-block w-100" alt="..."></a>
+        </div>
+        <div class="carousel-item">
+          <a href="odunpazariev.html"><img src="images/eskfoto/odunpazarıev.jpg" class="d-block w-100" alt="..."></a>
+        </div>
+        <div class="carousel-item">
+          <a href="sazova.html"><img src="images/eskfoto/sazova main.jpg" class="d-block w-100" alt="..."></a>
+        </div>
+        <div class="carousel-item">
+          <a href="adalar.html"><img src="images/adalarslider.png" class="d-block w-100" alt="..."></a>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <div class="image">
-      <img src="images/espark.jpg" alt="Alışveriş Merkezleri">
-      <div class="image-caption">Espark AVM</div>
-    </div>
-  </div>
+  <button id="backToTopBtn" onclick="scrollToTop()">Başa Dön</button>
+  <script>
+    // Butonun görünürlüğünü kontrol eden fonksiyon
+    window.onscroll = function() {
+        scrollFunction();
+    };
 
-  <h5>Mesire Alanları</h5>
-  <div class="content-section">
-    <div class="text">
-      <ul>
-        <li>Regülatör Piknik Alanı</li>
-        <li>Şehr-i Derya Park</li>
-        <li>Musaözü Tabiat Parkı</li>
-        <li>Kent Ormanı</li>
-        <li>Orman Fidanlığı</li>
-        <li>Çatacık Ormanı</li>
-        <li>Eski Göleti Mesire Alanı</li>
-      </ul>
-    </div>
-    <div class="image">
-      <img src="images/sehriderya.jpg" alt="Mesire Alanları">
-      <div class="image-caption">Şehr-i Derya Park</div>
-    </div>
-  </div>
+    function scrollFunction() {
+        var backToTopBtn = document.getElementById("backToTopBtn");
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+            backToTopBtn.style.display = "block";
+        } else {
+            backToTopBtn.style.display = "none";
+        }
+    }
 
-  <h5>Camiler</h5>
-  <div class="content-section">
-    <div class="text">
-      <ul>
-        <li>Reşadiye Cami</li >
-        <li>Çarşı Cami</li>
-        <li>Kurşunlu Küliyesi</li>
-        <li>Alaaddin Cami</li>
-        <li>Tiryakizade Cami</li>
-      </ul>
-    </div>
-    <div class="image">
-      <img src="images/reşat.jpg" alt="Camiler">
-      <div class="image-caption">Reşadiye Cami</div>
-    </div>
-  </div>
+    // Sayfanın başına dönen fonksiyon
+    function scrollToTop() {
+        document.body.scrollTop = 0; // Safari için
+        document.documentElement.scrollTop = 0; // Chrome, Firefox, IE ve Opera için
+    }
+</script>
 
-  <h4>Yöresel Lezzetler</h4>
-  <div class="content-section">
-    <div class="text">
-      <ul>
-        <li>Çibörek</li>
-        <li>Balaban Kebap</li>
-        <li>Haşhaşlı Gözleme</li>
-        <li>Met Helvası</li>
-      </ul>
-    </div>
-    <div class="image">
-      <img src="images/çibörek.jpg" alt="Yöresel Lezzetler">
-      <div class="image-caption">Çibörek</div>
-    </div>
-  </div>
-</div>
-
-
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-      aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-      aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-      aria-label="Slide 3"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-      aria-label="Slide 4"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <a href="kanlikavak.html"><img src="images/eskfoto/kanlikavak.webp" class="d-block w-100" alt="..."></a>
-    </div>
-    <div class="carousel-item">
-      <a href="odunpazariev.html"><img src="images/eskfoto/odunpazarıev.jpg" class="d-block w-100" alt="..."></a>
-    </div>
-    <div class="carousel-item">
-      <a href="sazova.html"><img src="images/eskfoto/sazova main.jpg" class="d-block w-100" alt="..."></a>
-    </div>
-    <div class="carousel-item">
-      <a href="adalar.html"><img src="images/adalarslider.png" class="d-block w-100" alt="..."></a>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>  
 
   <script>
     var sidemeu = document.getElementById("sidemenu");
